--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -77,7 +77,7 @@ jobs:
       if: github.event_name != 'pull_request'
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
+        image-ref: ghcr.io/${{ github.repository }}:latest
         format: 'sarif'
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH,MEDIUM'
@@ -94,7 +94,7 @@ jobs:
       if: github.event_name != 'pull_request'
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
+        image-ref: ghcr.io/${{ github.repository }}:latest
         format: 'table'
         severity: 'CRITICAL,HIGH'
         exit-code: '1'  # Fail if critical/high vulnerabilities found
